--- a/README.Rmd
+++ b/README.Rmd
@@ -21,37 +21,16 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/MomX/Momocs2/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/MomX/Momocs2/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of Momocs2 is to ...
+The goal of Momocs2 is to provide...
 
 ## Installation
 
 You can install the development version of Momocs2 like so:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# later
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(Momocs2)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+This is a basic example which shows you how to solve a common problem.
